refactor: add changes

--- a/src/styles/_boilerplate.scss
+++ b/src/styles/_boilerplate.scss
@@ -34,20 +34,18 @@ a:visited {
 body {
   margin: 0;
   padding: 0;
-  background-image: url("../img/main.JPG");
-  background-size: cover;
-  //background-position: center;
-  background-attachment: fixed;
-  //background-repeat: no-repeat;
-  background-position: center 30%;
+  //background-image: url("../img/main.JPG");
+  //background-size: cover;
+  //background-attachment: fixed;
+  //background-position: center 30%;
   line-height: 1.2;
-
   font-family: var(--font-family-primary), sans-serif;
   color: var(--color-dark);
 }
 
 @media screen and (max-width: 800px) {
-  body {
-    background-position: center center;
-  }
+  //body {
+  //  background-image: url("../img/IMG_1315.JPG");
+  //  background-attachment: scroll; /* Изменено на scroll для мобильных устройств */
+  //}
 }
