--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,18 @@
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("img/main.JPG");
+    background-size: cover;
+    background-position: center 30%;
+    z-index: -1; /* Чтобы фон был под контентом */
+}
+
 .container {
+    position: relative; /* Добавлено */
+    overflow: auto; /* Добавлено */
     max-width: 1200px;
     margin: 0 auto;
     padding: 150px 100px 100px 100px;
