--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("img/IMG_1310.JPG");
+    background-image: url("img/main.JPG");
     background-size: cover;
     background-position: center 30%;
     z-index: -1;
